# mlops-git-malyshev

./: .gitignore  app.py  pyproject.toml  requirements.txt
mlops_git_malyshev/: app.py  main.py
