[tool.poetry]
name = "mlops-git-malyshev"
version = "0.1.0"
description = "ML project"
authors = ["MalyshevAM <com.hizik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

numpy = "^1.26"
pandas = "^2.2"
matplotlib = "^3.8"
seaborn = "^0.13"
scikit-learn = "^1.5"
tensorflow = "^2.17"
nltk = "^3.9"
pymorphy3 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
